# CPP-Starter-Project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
